fix: Progress pagE'

--- a/src/blocks/Presale/Progress/styles.module.scss
+++ b/src/blocks/Presale/Progress/styles.module.scss
@@ -19,7 +19,8 @@
   height: 16px;
   border-radius: 50%;
   display: block;
-  margin-left: 2px;
+  margin-left: 10px;
+  margin-top: 5px;
 
   &-success {
     background: $JungleGreen;
